integration_test_results.txt
============================= test session starts ==============================
platform darwin -- Python 3.12.6, pytest-9.0.2, pluggy-1.6.0 -- /Users/vijaysingh/code/.venv/bin/python3.12
cachedir: .pytest_cache
benchmark: 5.2.3 (defaults: timer=time.perf_counter disable_gc=False min_rounds=5 min_time=0.000005 max_time=1.0 calibration_precision=10 warmup=False warmup_iterations=100000)
metadata: {'Python': '3.12.6', 'Platform': 'macOS-26.2-arm64-arm-64bit', 'Packages': {'pytest': '9.0.2', 'pluggy': '1.6.0'}, 'Plugins': {'anyio': '4.12.1', 'benchmark': '5.2.3', 'respx': '0.22.0', 'mock': '3.15.1', 'json-report': '1.5.0', 'metadata': '3.1.1', 'asyncio': '1.3.0', 'locust': '2.43.1', 'cov': '7.0.0'}, 'JAVA_HOME': '/Library/Java/JavaVirtualMachines/jdk-19.jdk/Contents/Home'}
rootdir: /Users/vijaysingh/code/codingagent
configfile: pytest.ini (WARNING: ignoring pytest config in pyproject.toml!)
plugins: anyio-4.12.1, benchmark-5.2.3, respx-0.22.0, mock-3.15.1, json-report-1.5.0, metadata-3.1.1, asyncio-1.3.0, locust-2.43.1, cov-7.0.0
asyncio: mode=Mode.AUTO, debug=False, asyncio_default_fixture_loop_scope=function, asyncio_default_test_loop_scope=function
collecting ... collected 2448 items / 3 errors / 14 deselected / 2 skipped / 2434 selected

==================================== ERRORS ====================================
__ ERROR collecting tests/integration/agent/memory/test_memory_integration.py __
ImportError while importing test module '/Users/vijaysingh/code/codingagent/tests/integration/agent/memory/test_memory_integration.py'.
Hint: make sure your test modules/packages have valid Python names.
Traceback:
../.venv/lib/python3.12/site-packages/_pytest/python.py:507: in importtestmodule
    mod = import_path(
../.venv/lib/python3.12/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/importlib/__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
../.venv/lib/python3.12/site-packages/_pytest/assertion/rewrite.py:197: in exec_module
    exec(co, module.__dict__)
tests/integration/agent/memory/test_memory_integration.py:23: in <module>
    from victor.agent.memory import EpisodicMemory, Episode, EpisodeFilter, SemanticMemory
E   ImportError: cannot import name 'EpisodeFilter' from 'victor.agent.memory' (/Users/vijaysingh/code/codingagent/victor/agent/memory/__init__.py)
___ ERROR collecting tests/integration/framework/test_persona_integration.py ___
import file mismatch:
imported module 'test_persona_integration' has this __file__ attribute:
  /Users/vijaysingh/code/codingagent/tests/integration/agent/personas/test_persona_integration.py
which is not the same as the test file we want to collect:
  /Users/vijaysingh/code/codingagent/tests/integration/framework/test_persona_integration.py
HINT: remove __pycache__ / .pyc files and/or use a unique basename for your test file modules
___ ERROR collecting tests/integration/security/test_security_integration.py ___
../.venv/lib/python3.12/site-packages/_pytest/python.py:507: in importtestmodule
    mod = import_path(
../.venv/lib/python3.12/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/importlib/__init__.py:90: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1387: in _gcd_import
    ???
<frozen importlib._bootstrap>:1360: in _find_and_load
    ???
<frozen importlib._bootstrap>:1331: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:935: in _load_unlocked
    ???
../.venv/lib/python3.12/site-packages/_pytest/assertion/rewrite.py:188: in exec_module
    source_stat, co = _rewrite_test(fn, self.config)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
../.venv/lib/python3.12/site-packages/_pytest/assertion/rewrite.py:357: in _rewrite_test
    tree = ast.parse(source, filename=strfn)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/Library/Frameworks/Python.framework/Versions/3.12/lib/python3.12/ast.py:52: in parse
    return compile(source, filename, mode, flags,
E     File "/Users/vijaysingh/code/codingagent/tests/integration/security/test_security_integration.py", line 34
E       }
E       ^
E   SyntaxError: closing parenthesis '}' does not match opening parenthesis '(' on line 30
=========================== short test summary info ============================
ERROR tests/integration/agent/memory/test_memory_integration.py
ERROR tests/integration/framework/test_persona_integration.py
ERROR tests/integration/security/test_security_integration.py
!!!!!!!!!!!!!!!!!!! Interrupted: 3 errors during collection !!!!!!!!!!!!!!!!!!!!
=========== 2 skipped, 14 deselected, 20 warnings, 3 errors in 8.43s ===========
